# Aegis

./: .gitignore  LICENSE  README.md  pyproject.toml
.specify/extensions/: .registry
.specify/integrations/: gemini.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
demo/: adk_worker_demo.py  live_adk_demo.py  output_contract.json  output_final_report.json  output_reconciliation_report.json
demo/assets/: aegis_narration_script.txt  demo_video_script.md  generate_audio.py  slides.txt  stitch_video.py
demo/sample_tasks/: login_bug_fix.json
policies/: policy.rego
src/adapters/: __init__.py  adk_adapter.py  antigravity_adapter.py  base_cli_adapter.py  gemini_cli_adapter.py  opencode_adapter.py  real_adk_worker.py  runtime_selector.py  trace_adapter.py  wrapper_adapter.py
src/aegis/: __init__.py  approval_manager.py  audit_logger.py  capability_auditor.py  capability_registry.py  cli.py  contract_builder.py  evidence_model.py  final_verifier.py  policy_engine.py  reconciliation_engine.py  repair_planner.py  runner.py  semantic_verifier.py  state_verifier.py
src/schemas/: capability.json  evidence_event.json  reconciliation_report.json  task_contract.json
src/ui/: __init__.py  terminal_ui.py
tests/: test_adapters.py  test_capability_auditor.py  test_capability_registry.py  test_cli.py  test_cli_runner.py  test_contract_builder.py  test_integration_matrix.py  test_policy_engine.py  test_real_adk_worker.py  test_reconciliation_engine.py  test_repair_planner.py  test_semantic_verifier.py  test_state_verifier_hardened.py
(+3 files in other folders)
